[package]
name = "anime"
version = "0.1.0"
edition = "2021"
authors = ["max_ishere"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
regex = "1.5.5"
with-macro = "0.1.1"
easy-scraper = "0.2.0"
user-error = "1.2.8"
thiserror = "1.0"
