[package]
name = "ani-tui"
keywords = ["cli", "anime", "mpv"]
version = "0.1.1"
authors = ["m-kuzmin"]
description = "Watch anime from the shell via mpv"
documentation = "https://docs.rs/ani-tui"
repository = "https://github.com/m-kuzmin/ani-tui"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
categories = ["command-line-utilities"]
include = ["/src", "/tests", "/README.md", "Cargo.lock", "Cargo.toml", "LICENSE"]

[dependencies]
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
regex = "1"
with-macro = "0.1"
easy-scraper = "0.2"
user-error = "1.2"
thiserror = "1"
lazy_static = "1"
hex = "0.4"
base64 = "0.13"
once_cell = "1"

[dev-dependencies]
mockall = "0.11"
mockall_double = "0.2"
